--- a/load-data-into-r-environment.html
+++ b/load-data-into-r-environment.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Yihao Chen, Li-Na He, Yuanzhe Zhang, Yuelong Shu, Di Zhang, Guangchuang Yu, Zhixiang Zuo" />
 
 
-<meta name="date" content="2024-05-13" />
+<meta name="date" content="2024-06-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -104,8 +104,8 @@
 <li class="chapter" data-level="3.1" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#availiable-tme-analysis-method-in-tiger"><i class="fa fa-check"></i><b>3.1</b> Availiable TME Analysis Method in tigeR</a></li>
 <li class="chapter" data-level="3.2" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#derive-the-proportions-of-different-tme-cell-types"><i class="fa fa-check"></i><b>3.2</b> Derive the Proportions of Different TME Cell Types</a></li>
 <li class="chapter" data-level="3.3" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#visualization-and-comparing-the-cell-proportions"><i class="fa fa-check"></i><b>3.3</b> Visualization and Comparing the Cell Proportions</a></li>
-<li class="chapter" data-level="3.4" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#searching-for-key-cell-types-influencing-immune-therapy-response"><i class="fa fa-check"></i><b>3.4</b> Searching for Key Cell Types Influencing Immune Therapy Response</a></li>
-<li class="chapter" data-level="" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#more-details-about-tme-analysis"><i class="fa fa-check"></i>📝 More Details about TME Analysis</a></li>
+<li class="chapter" data-level="3.4" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#searching-for-key-cell-types-associated-with-immunotherapy-response"><i class="fa fa-check"></i><b>3.4</b> Searching for Key Cell Types Associated with Immunotherapy Response</a></li>
+<li class="chapter" data-level="" data-path="tumor-microenviroment-analysis.html"><a href="tumor-microenviroment-analysis.html#more-details-about-tme-analysis"><i class="fa fa-check"></i>📝 More Details About TME Analysis</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="prediction-model-construction.html"><a href="prediction-model-construction.html"><i class="fa fa-check"></i><b>4</b> 🤖 Prediction Model Construction</a>
 <ul>
@@ -139,7 +139,7 @@
 <h2><span class="header-section-number">1.1</span> Organization of built-in data<a href="load-data-into-r-environment.html#organization-of-built-in-data" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>The built-in data follows several specifications for constructing:</p>
 <p>① They are constructed into a SummarizedExperiment object using the <strong>SummarizedExperiment()</strong> function in SummarizedExperiment package.</p>
-<p>② The assays of the SummarizedExperiment object are stored as a SimpleList containing an expression matrix, where rows represent genes and columns represent patients.</p>
+<p>② The assays of the SummarizedExperiment object are stored as a SimpleList containing an expression matrix, where rows represent genes and columns represent samples.</p>
 <p>③ The colData of the SummarizedExperiment object is a table(DFrame object of S4), where the row names must be the same as the column names of the expression matrix. The column names of the table represent the clinical information of patients. The detailed information about the column names is presented below.</p>
 <div style="width:780px; height:400px; overflow-y: scroll; overflow-x: hidden;">
 <table>
@@ -161,104 +161,98 @@
 <tr class="odd">
 <td align="center">sample id</td>
 <td align="center">character</td>
-<td align="center">The sample identification.</td>
-<td align="center">✓</td>
+<td align="center">The sample identity.</td>
+<td align="center">Required</td>
 </tr>
 <tr class="even">
 <td align="center">patient_name</td>
 <td align="center">character</td>
-<td align="center">The patient identification.</td>
-<td align="center">✕</td>
+<td align="center">The patient identity.</td>
+<td align="center">Alternative</td>
 </tr>
 <tr class="odd">
 <td align="center">dataset_id</td>
 <td align="center">character</td>
-<td align="center">The dataset identification.</td>
-<td align="center">✕</td>
+<td align="center">The dataset identity.</td>
+<td align="center">Alternative</td>
 </tr>
 <tr class="even">
-<td align="center">dataset_group</td>
-<td align="center">character</td>
-<td align="center"></td>
-<td align="center">✕</td>
-</tr>
-<tr class="odd">
 <td align="center">Treatment</td>
 <td align="center">PRE/POST</td>
 <td align="center">The patient sample is collected after Treatment or before Treatment</td>
-<td align="center">✓</td>
-</tr>
-<tr class="even">
-<td align="center">response</td>
-<td align="center">CR/MR/PR/PD/SD/NR/R/N</td>
-<td align="center">The Immunotherapy response.</td>
-<td align="center">✕</td>
+<td align="center">Required</td>
 </tr>
 <tr class="odd">
-<td align="center">response_NR</td>
-<td align="center">R/N</td>
-<td align="center">The Immunotherapy response which only contains R or N.</td>
-<td align="center">✓</td>
+<td align="center">response</td>
+<td align="center">CR/MR/PR/PD/SD/NR/R/N</td>
+<td align="center">The immunotherapy response.</td>
+<td align="center">Alternative</td>
 </tr>
 <tr class="even">
+<td align="center">response_NR</td>
+<td align="center">R/N</td>
+<td align="center">The immunotherapy response which only contains R or N.</td>
+<td align="center">Required</td>
+</tr>
+<tr class="odd">
 <td align="center">M.stage</td>
 <td align="center">character</td>
 <td align="center">The M stage of patients.</td>
-<td align="center">✕</td>
+<td align="center">Alternative</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="center">overall.survival..days.</td>
 <td align="center">value</td>
 <td align="center">The number of days, months or years of survival time of patients.(all samples must be the same unit)</td>
-<td align="center">✓</td>
+<td align="center">Required (for survival analysis)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="center">vital.status</td>
 <td align="center">Alive/Dead</td>
 <td align="center">The survival status of patient.</td>
-<td align="center">✓</td>
+<td align="center">Required (for survival analysis)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="center">Total.Mutation</td>
 <td align="center">numeric</td>
 <td align="center">The total mutation gene numbers.</td>
-<td align="center">✕</td>
+<td align="center">Alternative</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="center">Gender</td>
 <td align="center">M/F</td>
 <td align="center">The gender of patient.</td>
-<td align="center">✕</td>
+<td align="center">Alternative</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="center">Therapy</td>
 <td align="center">character</td>
 <td align="center">The anti-tumor therapy on patients.</td>
-<td align="center">✕</td>
-</tr>
-<tr class="even">
-<td align="center">age_start</td>
-<td align="center">numeric</td>
-<td align="center">When the tumor is diagnosed.</td>
-<td align="center">✕</td>
+<td align="center">Alternative</td>
 </tr>
 <tr class="odd">
+<td align="center">age_start</td>
+<td align="center">numeric</td>
+<td align="center">The age of the patient at diagnosis.</td>
+<td align="center">Alternative</td>
+</tr>
+<tr class="even">
 <td align="center">tumor_type</td>
 <td align="center">character</td>
 <td align="center">The type of tumor.</td>
-<td align="center">✕</td>
+<td align="center">Alternative</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="center">seq_type</td>
 <td align="center">character</td>
 <td align="center">The sequencing type.</td>
-<td align="center">✕</td>
+<td align="center">Alternative</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="center">id</td>
 <td align="center">character</td>
-<td align="center">The identification of dataset.</td>
-<td align="center">✕</td>
+<td align="center">The identity of dataset.</td>
+<td align="center">Alternative</td>
 </tr>
 </tbody>
 </table>
@@ -274,13 +268,13 @@
 </div>
 <div id="pre-processing-of-custom-data" class="section level2 hasAnchor" number="1.4">
 <h2><span class="header-section-number">1.4</span> Pre-processing of Custom Data<a href="load-data-into-r-environment.html#pre-processing-of-custom-data" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p> When importing custom data, you need to prepare at least one expression matrix (rows for genes, columns for samples), along with the corresponding column information table, which should include at least the following information:</p>
+<p> When conducting analysis using custom data, you need to pre-process your data and construct a SummarizedExperiment object. Prepare at least one gene expression matrix (rows for genes, columns for samples) and a data frame including corresponding clinical information of the samples. The data frame should include at least the following information:</p>
 <ul>
 <li>sample id</li>
 <li>Treatment (PRE/POST)</li>
 <li>response_NR (R/N)</li>
-<li>overall.survival..days. (Missing data is also acceptable)</li>
-<li>vital.status (Missing data is also acceptable)</li>
+<li>overall.survival..days. (for survival analysis)</li>
+<li>vital.status (for survival analysis)</li>
 </ul>
 <p> Here is a brief example:</p>
 <div style="width:780px; height:300px; overflow-y: scroll; overflow-x: hidden;">
